# simple_TTT_online

./: .gitignore  Makefile  README.md  Simple_TTT.keystore  Tris  bot.c  build.sh  client.c  gameplay.c  gui.c  main.c  server  server.c  server_gameplay.c  setup_android.sh  setup_raylib.sh  shapes.c
bckp/: Tris  server
include/: bot.h  client.h  gameplay.h  gui.h  main.h  server.h  shapes.h
lib/: android-touch-fix.diff  setup_libs.sh  setup_raylib.ps1  setup_raylib.sh  setup_raylib_cross_linuxforwin.sh
res/values/: strings.xml
res/xml/: network_security_config.xml
src/: AndroidManifest.xml  CMakeLists.txt  bot.c  bot.cpp  client.c  gameplay.c  gameplay.cpp  gui.c  gui.cpp  main.c  main.cpp  makefile  server.c  server_gameplay.c  shapes.c
src/com/thedarkbug/Simple_TTT/: ClientData.java  NativeLoader.java  ServerData.java
src/include/: bot.h  client.h  gameplay.h  gui.h  main.h  server.h  shapes.h
